--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,17 @@
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=/SLVIyangerBakerys/" />
+  </head>
+  <body></body>
+</html> -->
+
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="text/javascript">
+      sessionStorage.redirect = location.pathname + location.search;
+    </script>
     <meta http-equiv="refresh" content="0; url=/SLVIyangerBakerys/" />
   </head>
   <body></body>
